RegularTransaction history and cancel function added